[gd_scene load_steps=10 format=3 uid="uid://ui0dbh1wpffr"]

[ext_resource type="Texture2D" uid="uid://da3m5kf5he8pd" path="res://Assets/brackeys_platformer_assets/sprites/AlienSpaceship.png" id="1_ar1q6"]
[ext_resource type="Script" path="res://Scripts/AlienShip.gd" id="1_y7suw"]
[ext_resource type="Script" path="res://Scripts/hurt_box.gd" id="2_e75pv"]
[ext_resource type="PackedScene" uid="uid://e736joxi61ho" path="res://Scenes/kill_zone.tscn" id="4_tsoad"]

[sub_resource type="CircleShape2D" id="CircleShape2D_baf2a"]
radius = 9.0

[sub_resource type="Animation" id="Animation_12qlk"]
resource_name = "FlyingPattern"
length = 6.0
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 3, 4.5, 6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -25), Vector2(25, 0), Vector2(0, 25), Vector2(-25, 0), Vector2(0, -25)]
}

[sub_resource type="Animation" id="Animation_r4mat"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -25)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_oppss"]
resource_name = "take_damage"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.934493, 0.265055, 0.197185, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_583wd"]
_data = {
"FlyingPattern": SubResource("Animation_12qlk"),
"RESET": SubResource("Animation_r4mat"),
"take_damage": SubResource("Animation_oppss")
}

[node name="AlienShip" type="Node2D"]
position = Vector2(0, 25)
script = ExtResource("1_y7suw")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(0, -25)
texture = ExtResource("1_ar1q6")
region_enabled = true
region_rect = Rect2(0, 0, 23, 16)

[node name="HurtBox" type="Area2D" parent="Sprite2D"]
position = Vector2(-21, -24)
script = ExtResource("2_e75pv")

[node name="HurtBoxShape" type="CollisionShape2D" parent="Sprite2D/HurtBox"]
position = Vector2(21, 24)
shape = SubResource("CircleShape2D_baf2a")

[node name="KillZone" parent="Sprite2D" instance=ExtResource("4_tsoad")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/KillZone"]
shape = SubResource("CircleShape2D_baf2a")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_583wd")
}
autoplay = "FlyingPattern"

[node name="HitTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
[connection signal="timeout" from="HitTimer" to="." method="display_damage_animation_once"]
